Improved hover on mobile and added Podcast svg to credits page.

--- a/content/_index.html
+++ b/content/_index.html
@@ -106,7 +106,7 @@ lastmod: 2022-08-18
 <div class="relative">
   <!-- Div containing a gif -->
   <div id="gifwrapper">
-    <img src="/kscu-swig-and-studio.gif" alt="" id="kscu-gif" style="" />
+    <img src="/kscu-swig-and-studio.gif" alt="" id="kscu-gif" draggable="false"/>
   </div>
 
   <div id="header_text" style="z-index: 0; display: none;">
