--- a/content/_index.html
+++ b/content/_index.html
@@ -8,7 +8,7 @@ showSummary = false
 showAuthor = false
 showReadingTime = false
 
-showTableOfContents = false
+showTableOfContents = true
 showBreadcrumbs = false
 
 lastmod = 2022-08-18
