Changed show details margins.

--- a/content/_index.html
+++ b/content/_index.html
@@ -393,13 +393,13 @@ lastmod = 2022-08-18
   }
 
   @media (max-width: 450px) {
-    #left-col {
+    /* #left-col {
       min-width: 85%;
     }
 
     #right-col {
       min-width: 85%;
-    }
+    } */
   }
 </style>
 
